--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <img src="./img/People/Cedric.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Cedric</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-danger">Learn more</a>
+                  <p class="card-text">Cedric is a struggling inventor with a wonderful tech invention that will make lives easier , however, this invention is still in the sketch phase and will be for a while. He is single with no kids and needs a calm work environment, he is 21 years old.</p>
+                  <a href="./Cedric.html" class="btn btn-danger">Learn more</a>
                 </div>
             </div>
           </div>
