--- a/index.html
+++ b/index.html
@@ -4,63 +4,89 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="icon" href="./img/Favicon.png">
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <link rel="icon" href="./img/Favicon.png" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      rel="stylesheet"
+    />
     <title>C F A C</title>
   </head>
   <body>
     <header>
-        <h1 class="title">Cheshans Financial Advice Corporation</h1>
+      <h1 class="title">Cheshans Financial Advice Corporation</h1>
     </header>
-    <br>
+    <br />
     <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="./img/People/Cedric.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Cedric</h5>
-                  <p class="card-text">Cedric is a struggling inventor with a wonderful tech invention that will make lives easier , however, this invention is still in the sketch phase and will be for a while. He is single with no kids and needs a calm work environment, he is 21 years old.</p>
-                  <a href="./Cedric.html" class="btn btn-danger">Learn more</a>
-                </div>
+      <div class="row">
+        <div class="col">
+          <div class="card" style="width: 18rem">
+            <img src="./img/People/Jane.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Jane</h5>
+              <p class="card-text">
+                Jane is in her mid twenties with a wonderful job at the WNBA with a average salary. She plays as a gaurd
+              </p>
+              <a href="./Cedric.html" class="btn btn-danger">Learn more</a>
             </div>
           </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="./img/People/Jane.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-danger">Learn more</a>
-                </div>
-              </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem">
+            <img src="./img/People/Cedric.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Cedric</h5>
+              <p class="card-text">
+                Cedric is a struggling inventor with ambitions to make a versatile tech peice. he is signle with a part time job.
+              </p>
+              <a href="#" class="btn btn-danger">Learn more</a>
+            </div>
           </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="./img/People/Jonathan.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-danger">Learn more</a>
-                </div>
-              </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem">
+            <img src="./img/People/Owen.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Owen</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-danger">Learn more</a>
+            </div>
           </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="./img/People/Owen.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-danger">Learn more</a>
-                </div>
-              </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem">
+            <img
+              src="./img/People/Jonathan.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Jonathan</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-danger">Learn more</a>
+            </div>
           </div>
         </div>
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
