--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="card-body">
               <h5 class="card-title">Cedric</h5>
               <p class="card-text">
-                Cedric is a struggling inventor with ambitions to make a versatile tech peice. he is signle with a part time job.
+                Cedric is a struggling inventor with ambitions to make a versatile tech peice. he is single with a part time job.
               </p>
               <a href="#" class="btn btn-danger">Learn more</a>
             </div>
@@ -57,8 +57,7 @@
             <div class="card-body">
               <h5 class="card-title">Owen</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Owen is a succesful buisness owner being funded by the government, so he doesn't pay taxes. 
               </p>
               <a href="#" class="btn btn-danger">Learn more</a>
             </div>
