--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <div class="card-body">
               <h5 class="card-title">Jane</h5>
               <p class="card-text">
-                Jane is in her mid twenties with a wonderful job at the WNBA with a average salary. She plays as a gaurd
+                Jane is in her mid twenties with a wonderful job at the WNBA
+                with a average salary. She plays as a gaurd
               </p>
               <a href="./Cedric.html" class="btn btn-danger">Learn more</a>
             </div>
@@ -45,7 +46,8 @@
             <div class="card-body">
               <h5 class="card-title">Cedric</h5>
               <p class="card-text">
-                Cedric is a struggling inventor with ambitions to make a versatile tech peice. he is single with a part time job.
+                Cedric is a struggling inventor with ambitions to make a
+                versatile tech peice. he is single with a part time job.
               </p>
               <a href="#" class="btn btn-danger">Learn more</a>
             </div>
@@ -57,7 +59,8 @@
             <div class="card-body">
               <h5 class="card-title">Owen</h5>
               <p class="card-text">
-                Owen is a succesful buisness owner being funded by the government, so he doesn't pay taxes. 
+                Owen is a succesful buisness owner being funded by the
+                government, so he doesn't pay taxes.
               </p>
               <a href="#" class="btn btn-danger">Learn more</a>
             </div>
@@ -73,8 +76,8 @@
             <div class="card-body">
               <h5 class="card-title">Jonathan</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Jonathan is a single 21 years old who is waiting for the big
+                lotto jackpot, he has a mcdonalds job
               </p>
               <a href="#" class="btn btn-danger">Learn more</a>
             </div>
