--- a/Jane.html
+++ b/Jane.html
@@ -21,6 +21,20 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div class="PersonHeader">
+            <h1>Jane</h1>
+            <p>
+                Jane is a WNBA player in her late twenties, she is playing in the GTA for 2 years as a guard. She is making the average salary of a WNBA player which is $60,000/annual according to Sportrac. She is single and has no kids, living by herself.
+            </p>
+        </div>
+    </header>
+    <br>
+    <div class="Housing">
+        <img src="./img/Options/home.png" alt="..." />
+        <h2>Housing</h2>
+    </div>
+
     
 </body>
 </html>
