--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 Jane is in her mid twenties with a wonderful job at the WNBA
                 with a average salary. She plays as a gaurd
               </p>
-              <a href="./Cedric.html" class="btn btn-danger">Learn more</a>
+              <a href="./Jane.html" class="btn btn-danger">Learn more</a>
             </div>
           </div>
         </div>
@@ -49,7 +49,7 @@
                 Cedric is a struggling inventor with ambitions to make a
                 versatile tech peice. he is single with a part time job.
               </p>
-              <a href="#" class="btn btn-danger">Learn more</a>
+              <a href="Cedric.html" class="btn btn-danger">Learn more</a>
             </div>
           </div>
         </div>
@@ -62,7 +62,7 @@
                 Owen is a succesful buisness owner being funded by the
                 government, so he doesn't pay taxes.
               </p>
-              <a href="#" class="btn btn-danger">Learn more</a>
+              <a href="Owen.html" class="btn btn-danger">Learn more</a>
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
                 Jonathan is a single 21 years old who is waiting for the big
                 lotto jackpot, he has a mcdonalds job
               </p>
-              <a href="#" class="btn btn-danger">Learn more</a>
+              <a href="Jonathan.html" class="btn btn-danger">Learn more</a>
             </div>
           </div>
         </div>
