--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <h5 class="card-title">Jonathan</h5>
               <p class="card-text">
                 Jonathan is a single 21 years old who is waiting for the big
-                lotto jackpot, he has a mcdonalds job
+                lotto jackpot, he has a mcdonalds job paying a decent salary
               </p>
               <a href="Jonathan.html" class="btn btn-danger">Learn more</a>
             </div>
