--- a/Jane.html
+++ b/Jane.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous"
     />
     <link rel="icon" href="./img/Favicon.png" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./PersonStyle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,9 +30,11 @@
         </div>
     </header>
     <br>
+    <hr>
+    <br>
     <div class="Housing">
-        <img src="./img/Options/home.png" alt="..." />
         <h2>Housing</h2>
+        <img src="./img/Options/home.png" alt="..." />
     </div>
 
     
