--- a/Jane.html
+++ b/Jane.html
@@ -24,19 +24,71 @@
     <header>
         <div class="PersonHeader">
             <h1>Jane</h1>
-            <p>
+            <p class="TopDescript">
                 Jane is a WNBA player in her late twenties, she is playing in the GTA for 2 years as a guard. She is making the average salary of a WNBA player which is $60,000/annual according to Sportrac. She is single and has no kids, living by herself.
             </p>
         </div>
     </header>
-    <br>
-    <hr>
-    <br>
-    <div class="Housing">
-        <h2>Housing</h2>
-        <img src="./img/Options/home.png" alt="..." />
-    </div>
 
-    
+    <!--Housing-->
+    <div class="row">
+        <div class="col IconSide">
+            <h2>Housing</h2>
+            <img src="./img/Options/home.png" alt="..." />
+        </div>
+        <div class="col TextSide">
+            <p>
+                I will recommend a small apartment in an urban area like Toronto. It is close to work facilities, and she can market herself well known in the athletic world. We would get her a single-bed apartment and I would probably recommend renting it. The average rent for a single bed is $2,502 each month according to CTV news.
+            </p>
+        </div>
+    </div>
+    <hr>
+    <!--Account Options-->
+    <div class="row">
+        <div class="col IconSide">
+            <h2>Account Options</h2>
+            <img src="./img/Options/AccountOptions.png" alt="..." />
+        </div>
+        <div class="col TextSide">
+            <p>
+                Some Account option I would recommend is an FHSA which is a first home savings account, this way she can save for her ownership of a house and keep some money tax-free. I would also recommend an RRSP as most athletes retire early roughly at the age of late thirties. You should also incorporate your business because you are technically a social representative, you can get a lot of expenses that you can write, and you can also hire a family member for extra benefits, for providing jobs.
+            </p>
+        </div>
+    </div>
+    <hr>
+    <!--Transportation-->
+    <div class="row">
+        <div class="col IconSide">
+            <h2>Transportation</h2>
+            <img src="./img/Options/car.png" alt="..." />
+        </div>
+        <div class="col TextSide">
+            <p class="Transportation">
+                Lastly, for car payments, we would recommend a car that's good for insurance, but also looks nice. I think a jeep wrangler is good for insurance as the average is $1,400 annually but because you're in your late twenties it would be around two thousand dollars or more. A jeep wrangler is a very reliable vehicle and can be worked on by anyone, so maintenance for a 12-year Jeep is $700 annually. I found a really cool jeep wrangler with some mods, that's 12 yrs old with 240,000km, the price is negotiable, but he listed it for $18,000, I think this is a good car for you because it's big enough for athletic size, but also not as big, with good insurance. Car. In order to pay for this we can get a loan, that loan will have a 6% interest rate so you will pay $1547.88 a month, and will pay $574.57 extra.
+            </p>
+        </div>
+    </div> 
+    <hr>
+    <!--Conclusion-->
+    <p>
+        If we add up all your other expenses it will be around $425 monthly, this includes $200 for food, $100 for clothes, $75 for wifi data, and $50 for other/emergency expenses. We will disperse the rest which is 255.06 into our 3 bank accounts, FHSA($150), RRSP($50), and Savings($55.06), I wouldn't recommend investing in stocks or start-up business because you don't have enough to make shocking outcomes, and it will make your money much tighter than needed. You need some liquid cash.
+    </p>
+    <br>
+    <p>
+        <b>Income</b><br>
+        5,000/month		Income<br>
+        <br>
+        <b>Expsenses</b><br>
+        2,502/month		rent<br>
+        210/month		Car Insurance<br>
+        58/month		Car Maintenance (Some months will be more than others like brake pads are more than oil, but it should average out)<br>
+        1,549.94/month	Car savings (will pay off in a year with a loan, you will be paying an extra 590.35)<br>
+        425/month 		Other/Emergency<br>
+        <br>
+        <b>Savings</b><br>
+        FHSA 150<br>
+        RRSP			50<br>
+        Savings			55.06<br>
+    </p>
 </body>
 </html>
