--- a/Cedric.html
+++ b/Cedric.html
@@ -1,26 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-    crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
     />
     <link rel="icon" href="./img/Favicon.png" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./PersonStyle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      rel="stylesheet"
     />
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <title>Cedric</title>
+    <style>
+      body {
+        background-color: lightblue;
+        overflow-x: hidden;
+      }
+      .PersonHeader {
+        background-image: url(./img/PersonBackground/CedricBackground.jpeg);
+        color: #1c1c1c;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      .TopDescript {
+        color: white;
+      }
+      p {
+        color: black;
+      }
+      h1 {
+        color: white;
+      }
+      h2 {
+        color: black;
+      }
+      .Transportation {
+        font-size: 24px;
+      }
+      .Account{
+        font-size: 24px;
+      }
+      .Housing{
+        font-size: 24px;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="PersonHeader">
+        <h1>Cedric</h1>
+        <p class="TopDescript">
+          Cedric is a struggling inventor with a wonderful tech invention that
+          will make lives easier , however, this invention is still in the
+          sketch phase and will be for a while. He is single with no kids and
+          needs a calm work environment, he is 21 years old. He doesn't want an
+          extraordinary lifestyle, as long as his inventions reach many hands.
+          He has a part-time job to make ends meet and to allow him to find time
+          to make his invention. Therefore he is making $2648. It is not a lot
+          so he needs to start sharing stuff.
+        </p>
+      </div>
+    </header>
+
+    <!--Housing-->
+    <div class="row">
+      <div class="col IconSide">
+        <h2>Housing</h2>
+        <img src="./img/Options/home.png" alt="..." />
+      </div>
+      <div class="col TextSide">
+        <p class="Housing">
+          We will get him a studio apartment in Calgary and make him share with
+          a roommate. The average rent for a studio in Calgary is $1569 Zumper.
+          We will find 1 roommate who will also be his business partner. It may
+          seem hard to share a studio apartment, but it is doable spacewise. Now
+          his rent is $784.5, this is good for him to rent because permanent
+          living situations are only good for people with stable incomes,
+          however, Cedric does not have that so its better to get a mad
+          landlord than a bank.
+        </p>
+      </div>
+    </div>
+    <hr />
+    <!--Account Options-->
+    <div class="row">
+      <div class="col IconSide">
+        <h2>Account Options</h2>
+        <img src="./img/Options/AccountOptions.png" alt="..." />
+      </div>
+      <div class="col TextSide">
+        <p class="Account">
+          The account I recommend him having is a TFSA account because of
+          tax-free you can take it out when you get much richer but you won't be
+          holding that as your income. Although the limit is $6,500 I would
+          recommend keeping the leftover and keeping it liquid as it is needed
+          to build prototypes and to invest into that invention of yours. A TFSA
+          account is technically liquid because you can take it out whenever you
+          want, however, you're going to get taxed for it as the government
+          recognizes it as income. Stocks are good investments in your situation
+          but Cedric should only invest 20% of his savings after every other
+          expense is paid.
+        </p>
+      </div>
+    </div>
+    <hr />
+    <!--Transportation-->
+    <div class="row">
+      <div class="col IconSide">
+        <h2>Transportation</h2>
+        <img src="./img/Options/car.png" alt="..." />
+      </div>
+      <div class="col TextSide">
+        <p class="Transportation">
+          Lastly, his car. I wouldn't recommend he get a car, because I don't
+          think it would be worth it in Calgary because there is nowhere to go,
+          therefore I would tell him to invest in a bus pass. I would go on the
+          bus 20 times a month which is 10 trips. I think that is plenty for
+          someone whose only reason for going out should just be for food or
+          getting materials for his invention. An adult fare is $3.60 and lasts
+          90 minutes fares. Therefore monthly he should spend somewhere around
+          $72.
+        </p>
+      </div>
+    </div>
+    <hr />
+    <!--Conclusion-->
+    <p>
+      For other things, he should spend $300 including food, clothes, tech, and
+      wifi cable. This leaves $1491.5 he should do 80% ($1196.8) investing in
+      himself and 20% ($298.3) savings for the future. I think Cedric should
+      take this risk because he is already deeply invested in his invention, so
+      this budget will set him up for success, with a little emergency money.
+    </p>
+    <br />
+    <p>
+      <b>Income</b><br />
+      2648/month Income<br />
+      <br />
+      <b>Expsenses</b><br />
+      784.5/month rent<br />
+      300/month Other/Emergency<br />
+      <br />
+      <b>Savings</b><br />
+      1196.8 Investing In Invention<br />
+      298.3 TFSA<br />
+    </p>
+  </body>
 </html>
