--- a/Jane.html
+++ b/Jane.html
@@ -29,7 +29,7 @@
         background-repeat: no-repeat;
       }
       .PersonHeader {
-        background-image: url(./img/JaneBackground.jpeg);
+        background-image: url(./img/PersonBackground/JaneBackground.jpeg);
         color: #1c1c1c;
         background-repeat: no-repeat;
         background-size: cover;
