--- a/Jonathan.html
+++ b/Jonathan.html
@@ -1,26 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-    crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
     />
     <link rel="icon" href="./img/Favicon.png" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./PersonStyle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      rel="stylesheet"
     />
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <title>Jonathan</title>
+    <style>
+      body {
+        background-color: lightcoral;
+        overflow-x: hidden;
+      }
+      .PersonHeader {
+        background-image: url(./img/PersonBackground/JonathanBackground.jpeg);
+        color: #1c1c1c;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+      }
+      .TopDescript {
+        color: black;
+      }
+      p {
+        color: black;
+      }
+      h1 {
+        color: black;
+      }
+      h2 {
+        color: black;
+      }
+      .Transportation {
+        font-size: 24px;
+      }
+      .Account {
+        font-size: 19px;
+      }
+      .Housing {
+        font-size: 24px;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="PersonHeader">
+        <h1>Jonathan</h1>
+        <p class="TopDescript">
+            Jonathan is a college graduate with no debt, he is 23 living with his parents working at mcdonalds. He plans on making money with the lottery, and for this week the lotto max jackpot is 70 million, and will update on june 6. Because he lives with his family he has no rent and gets home cooked meals. The only things he pays for is transportation, clothing and data plan.
+        </p>
+      </div>
+    </header>
+
+    <!--Housing-->
+    <div class="row">
+      <div class="col IconSide">
+        <h2>Housing</h2>
+        <img src="./img/Options/home.png" alt="..." />
+      </div>
+      <div class="col TextSide">
+        <p class="Housing">
+            I would still recommend him living with his parents because it is the best situation right now. It allows him to save money and not worry about rent or utilities. It will also give him time to focus on his studies and career without the added stress of living on his own. Plus, living with his parents will give him the support he needs during this difficult time.
+        </p>
+      </div>
+    </div>
+    <hr />
+    <!--Account Options-->
+    <div class="row">
+      <div class="col IconSide">
+        <h2>Account Options</h2>
+        <img src="./img/Options/AccountOptions.png" alt="..." />
+      </div>
+      <div class="col TextSide">
+        <p class="Account">
+            For account options I would recommend a savings, and checking account. These accounts are vital for him, as well i would suggest he get a HFSA in order to save for a home tax free. Because we want Jonathan to have a good chance at winning the lottery we would take 50% of the check and put that to tickets for the lottery. From his Mcdonalds job he would have an income of $24.83 an hour, because Jonathan has nothing else to do he spends 10 hours a day at his job. So he makes 7 thousand dollars a month. 
+        </p>
+      </div>
+    </div>
+    <hr />
+    <!--Transportation-->
+    <div class="row">
+      <div class="col IconSide">
+        <h2>Transportation</h2>
+        <img src="./img/Options/car.png" alt="..." />
+      </div>
+      <div class="col TextSide">
+        <p class="Transportation">
+            For his job he goes there and back everyday, he goes on the mi way bus which is $3.20 per ride, he goes 14 times a week and 4 weeks in a month so he spends $179.2. He can buy lottery tickets from home so he doesn't need to go to a convenience store.
+        </p>
+      </div>
+    </div>
+    <hr />
+    <!--Conclusion-->
+    <p>
+        He is not a materialistic person so he spends $50 a month on clothes. For his data we will go with rogers mobiles only 5g mobile 50gb plan with unlimited data. This costs $65 a month. Lastly, I would recommend him to play with stocks as it could return some benefits.
+    </p>
+    <br />
+    <p>
+      <b>Income</b><br />
+      7,000/month Income<br />
+      <br />
+      <b>Expsenses</b><br />
+      Transportation		179.2<br />
+      Clothing			50<br />
+      Data Plan		65<br />
+      Lottery Tickets		3500    <br />  
+      <br />
+      <b>Savings</b><br />
+      HFSA			1068.6<br /> 
+      Savings			1068.6<br /> 
+      Stocks			1068.6<br /> 
+    </p>
+  </body>
 </html>
