--- a/Owen.html
+++ b/Owen.html
@@ -1,26 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-    crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
     />
     <link rel="icon" href="./img/Favicon.png" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./PersonStyle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      rel="stylesheet"
     />
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <title>Owen</title>
+    <style>
+      body {
+        background-color: darkgreen;
+        overflow-x: hidden;
+      }
+      .PersonHeader {
+        background-image: url(./img/PersonBackground/OwenBackground.jpeg);
+        color: #1c1c1c;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+      }
+      .TopDescript {
+        color: black;
+      }
+      p {
+        color: black;
+      }
+      h1 {
+        color: white;
+      }
+      h2 {
+        color: black;
+      }
+      .Transportation {
+        font-size: 24px;
+      }
+      .Account {
+        font-size: 19px;
+      }
+      .Housing {
+        font-size: 24px;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="PersonHeader">
+        <h1>Cedric</h1>
+        <p class="TopDescript">
+          Owen is a successful business owner, owning a medical company that is
+          funded by the government. He is married but has no kids. His annual
+          salary is $300,000 annually. He likes to live in the city and wants a
+          big house.
+        </p>
+      </div>
+    </header>
+
+    <!--Housing-->
+    <div class="row">
+      <div class="col IconSide">
+        <h2>Housing</h2>
+        <img src="./img/Options/home.png" alt="..." />
+      </div>
+      <div class="col TextSide">
+        <p class="Housing">
+          I would suggest to him to get a mortgage because he has the financial
+          resources to do so, and it will be beneficial to get some real estate.
+          The mortgage rate for a 5 year variable mortgage is %6.45. The reason
+          I would go with a variable rate, is because you won't be affected by
+          it’s changing over the years. I would suggest the down payment of
+          $300,000 thousand as that is 1 year of your salary so I would say just
+          live with your family for that term. With a $300,000 down payment, you
+          would get a $1,495,000 mortgage, with a 6.45% interest rate you will
+          pay monthly $16,438.54.
+        </p>
+      </div>
+    </div>
+    <hr />
+    <!--Account Options-->
+    <div class="row">
+      <div class="col IconSide">
+        <h2>Account Options</h2>
+        <img src="./img/Options/AccountOptions.png" alt="..." />
+      </div>
+      <div class="col TextSide">
+        <p class="Account">
+          The accounts I recommend will be a FHSA because building a real estate
+          portfolio is really going to be beneficial to grow generational
+          wealth. I wouldn’t recommend a TFSA account because the limit is
+          $6,500, and once you take it out you will be taxed, so as a business
+          you will be put in such a high tax bracket it won't be worth it. Some
+          ways to avoid taxes is by incorporating your business and hiring
+          people you would get benefits like lower tax rates, and it's easier to
+          claim capital. Capital is a critical component of running a business
+          from day to day and financing its future growth. You should also make
+          some donations because Charitable donations over $200 will typically
+          bring provincial tax credits between 11.16% (Ontario) source . Tax
+          credit refers to an amount of money that taxpayers can subtract
+          directly from the taxes they owe. You should also use a Capital
+          Dividend Account. The Capital Dividend Account can save you millions
+          in tax by allowing life insurance proceeds and the non-taxable portion
+          (50%) of capital gains to flow out of the corporation tax-free. For
+          example If your corporation earns a $100,000 capital gain from selling
+          a stock, 50% is taxable, and the other 50% is non-taxable. The
+          non-taxable portion becomes a Capital Dividend Account credit. In this
+          case, $50,000 is taxable, and the other $50,000 can come out of the
+          corporation completely tax-free via the Capital Dividend Account.
+          ocean 6 .
+        </p>
+      </div>
+    </div>
+    <hr />
+    <!--Transportation-->
+    <div class="row">
+      <div class="col IconSide">
+        <h2>Transportation</h2>
+        <img src="./img/Options/car.png" alt="..." />
+      </div>
+      <div class="col TextSide">
+        <p class="Transportation">
+          Lastly, instead of getting a salary request for a dividend, that is
+          why you don't get taxed, because technically you don't have a salary.
+          I suggest you get a car that is reliable, and you should just buy it
+          with a finance plan. This bmw 3 series is really good, we will finance
+          it as it will be better for you BMW. The interest rate is 6.99%, and
+          the car itself is $63,498.50, so the monthly payment is $1,158.06. The
+          maintenance for this car will get higher and higher like always, but
+          the 1 year payment will be $437. Because you probably drive everyday i
+          would say $300 For gas a monthly payment.
+        </p>
+      </div>
+    </div>
+    <hr />
+    <!--Conclusion-->
+    <p>
+      For food, because you have a wife, food will be $600 a month, and extra
+      $400 for others. This should cover basic groceries and toiletries.
+      Additional costs for entertainment, such as dining out or going to the
+      movies, should be factored in separately. The total cost of living should
+      be taken into account in budgeting for the household.
+    </p>
+    <br />
+    <p>
+      <b>Income</b><br />
+      25,000/month Income<br />
+      <br />
+      <b>Expsenses</b><br />
+      Mortgage 16,438.54<br />
+      Car 1,158.06<br />
+      Car Mantinences 437 (only for the first year for the rest of the years)<br />
+      Food 600<br />
+      Gas 300<br />
+      Other 400<br />
+      <br />
+      <b>Savings</b><br />
+      FHSA 1133.28<br />
+      Capital Dividend Account 2000<br />
+      Charity 500<br />
+      Stocks 1000<br />
+      Savings 1033.12<br />
+    </p>
+  </body>
 </html>
