--- a/Jonathan.html
+++ b/Jonathan.html
@@ -32,13 +32,13 @@
         background-position: center;
       }
       .TopDescript {
-        color: black;
+        color: white;
       }
       p {
         color: black;
       }
       h1 {
-        color: black;
+        color: lightcoral;
       }
       h2 {
         color: black;
