--- a/Jane.html
+++ b/Jane.html
@@ -56,9 +56,8 @@
       <div class="PersonHeader">
         <h1>Jane</h1>
         <p class="TopDescript">
-          Jane is a WNBA player in her late twenties, she is playing in the GTA
-          for 2 years as a guard. She is making the average salary of a WNBA
-          player which is $60,000/annual according to Sportrac. She is single
+          Jane is a WNBA player in her late twenties. Jane play's in the GTA
+          for two years as a guard. She earns the average salary of a WNBA 		                                                 player ($60,000/annual) from Sportrac. She is single
           and has no kids, living by herself.
         </p>
       </div>
@@ -74,9 +73,9 @@
         <p>
           I will recommend a small apartment in an urban area like Toronto. It
           is close to work facilities, and she can market herself well known in
-          the athletic world. We would get her a single-bed apartment and I
+          the athletic world. We would get her a single-bed apartment, and I
           would probably recommend renting it. The average rent for a single bed
-          is $2,502 each month according to CTV news.
+          is $2,502 each month.
         </p>
       </div>
     </div>
@@ -91,11 +90,11 @@
         <p>
           Some Account option I would recommend is an FHSA which is a first home
           savings account, this way she can save for her ownership of a house
-          and keep some money tax-free. I would also recommend an RRSP as most
-          athletes retire early roughly at the age of late thirties. You should
-          also incorporate your business because you are technically a social
+          and keep some money tax-free. I would also recommend an RRSP because most
+          athletes retire early at the age of late thirties. You should
+          also, incorporate your business because you are technically a social
           representative, you can get a lot of expenses that you can write, and
-          you can also hire a family member for extra benefits, for providing
+          you can also hire a family member for extra benefits to provide
           jobs.
         </p>
       </div>
