--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <div class="card-body">
               <h5 class="card-title">Jane</h5>
               <p class="card-text">
-                Jane is in her mid twenties with a wonderful job at the WNBA
-                with a average salary. She plays as a gaurd
+                Jane is in her mid-twenties with a great job at the WNBA with an average salary. She plays as a guard.
               </p>
               <a href="./Jane.html" class="btn btn-danger">Learn more</a>
             </div>
@@ -46,8 +45,7 @@
             <div class="card-body">
               <h5 class="card-title">Cedric</h5>
               <p class="card-text">
-                Cedric is a struggling inventor with ambitions to make a
-                versatile tech peice. he is single with a part time job.
+                Cedric is a struggling inventor with ambitions to make a versatile tech piece. Cedric is single with a part-time job.
               </p>
               <a href="Cedric.html" class="btn btn-danger">Learn more</a>
             </div>
@@ -59,7 +57,7 @@
             <div class="card-body">
               <h5 class="card-title">Owen</h5>
               <p class="card-text">
-                Owen is a succesful buisness owner being funded by the
+                Owen is a successful business owner being funded by the
                 government, so he doesn't pay taxes.
               </p>
               <a href="Owen.html" class="btn btn-danger">Learn more</a>
@@ -77,7 +75,7 @@
               <h5 class="card-title">Jonathan</h5>
               <p class="card-text">
                 Jonathan is a single 21 years old who is waiting for the big
-                lotto jackpot, he has a mcdonalds job paying a decent salary
+                lotto jackpot, he has a Mcdonald's job paying a decent salary
               </p>
               <a href="Jonathan.html" class="btn btn-danger">Learn more</a>
             </div>
